# CoRide-API

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  LICENSE  README-en.md  README.md  deploy.sh  dev.bat  docker-compose.yml  nginx.conf  start.sh
.github/workflows/: docker.yml  release.yml
backend/: Cargo.toml
backend/config/: config.yaml
backend/src/: config.rs  lib.rs  main.rs
backend/src/db/: mod.rs  models.rs
backend/src/db/migrations/: 001_init.sql  002_users.sql  003_channels.sql  004_models.sql  005_quotas.sql  006_app_profiles.sql  007_channel_quotas.sql  008_health_check.sql  009_traffic_plans.sql  010_user_keys.sql  011_quotas_channel_id.sql  012_ip_access_control.sql  013_add_indexes.sql
backend/src/middleware/: admin_auth.rs  auth.rs  ip_filter.rs  mod.rs  rate_limit.rs  user_auth.rs
backend/src/router/: admin_routes.rs  mod.rs  proxy_routes.rs
backend/src/service/: anthropic.rs  health.rs  log.rs  mod.rs  openai.rs  proxy.rs  quota.rs
backend/src/state/: app_state.rs
backend/src/utils/: encrypt.rs  jwt.rs  mod.rs  token_counter.rs
docs/superpowers/plans/: 2026-04-18-channel-usage-stats.md
docs/superpowers/specs/: 2026-04-18-channel-usage-stats-design.md
vibe/: DP-completed.md  DP.md  PRD.md  buglist-completed.md  buglist.md  docker-plan.md  todo.md  unit-test.md
web/: .env  .env.prod  .env.test  README.en_US.md  README.md  package.json  uno.config.ts  vite.config.ts
web/src/locales/: index.ts
web/src/theme/: settings.ts
web/src/typings/: app.d.ts  components.d.ts  (+2 more)
(+55 files in other folders)
