[package]
name = "coride-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["json"] }
http = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
governor = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
bcrypt = "0.16"
jsonwebtoken = "9"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
tower-http = { version = "0.6", features = ["cors", "fs", "compression-br"] }
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
base64 = "0.22"
aes-gcm = { version = "0.10", features = ["std"] }
sha2 = "0.10"
fastrand = "2"
